# AppliedRoboticRoomMapping

./: .gitignore  LICENSE  README.md
install/lidar_slam_mapping/lib/lidar_slam_mapping/: lidar_min_distance  lidar_obstacle_avoidance
install/lidar_slam_mapping/share/lidar_slam_mapping/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lidar_slam_mapping/share/lidar_slam_mapping/config/: nav2_params.yaml  scout_mini.yaml
install/lidar_slam_mapping/share/lidar_slam_mapping/launch/: lidar_obstacle_avoidance.launch.py  slam_mapping_launch.py
install/object_recognition/lib/object_recognition/: zed2_yolo
install/object_recognition/share/object_recognition/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/object_recognition/share/object_recognition/launch/: zed2_yolo_launch.py
install/rslidar_msg/share/ament_index/resource_index/parent_prefix_path/: rslidar_msg
install/rslidar_msg/share/rslidar_msg/: local_setup.sh  package.sh
install/rslidar_sdk/lib/rslidar_sdk/: rslidar_sdk_node
install/rslidar_sdk/share/rslidar_sdk/: local_setup.sh  package.sh
install/rslidar_sdk/share/rslidar_sdk/config/: config.yaml
install/rslidar_sdk/share/rslidar_sdk/launch/: start.py
install/scout_base/share/scout_base/: local_setup.sh  package.sh
install/scout_base/share/scout_base/launch/: scout_base.launch.py
install/scout_description/share/scout_description/: package.sh
install/scout_msgs/share/scout_msgs/: package.sh
install/ugv_sdk/share/ugv_sdk/: package.sh
log/: latest_build
src/lidar_slam_mapping/: .package.xml.swp  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/lidar_slam_mapping/config/: pointcloud_to_laserscan_params.yaml  scout_mini.yaml  slam_toolbox_params.yaml
src/lidar_slam_mapping/launch/: slam_mapping_launch.py  slam_mapping_launch2.py
src/lidar_slam_mapping/lidar_slam_mapping/: lidar_min_distance.py  lidar_obstacle_avoidance.py
src/lidar_slam_mapping/maps/: my_map.yaml.pgm  my_map.yaml.yaml
src/lidar_slam_mapping/rviz/: slam_visualization.rviz
src/object_recognition/: CMakeLists.txt  package.xml  setup.py  test.py  yolo3.py
src/object_recognition/object_recognition/: zed2_yolo.py
