<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_slam_mapping</name>
  <version>0.0.1</version>
  <description>A package for SLAM mapping using LiDAR.</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>Apache License 2.0</license> <!-- Use a valid license -->

  <!-- Dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>rslidar_sdk</build_depend>
  <build_depend>rviz2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

